# telephony_cellular_call

./: BUILD.gn  README.md  README_zh.md  bundle.json  cellularcall.gni  ohos.build
framework/: call_status_callback_proxy.cpp  cellular_call_client.cpp  cellular_call_proxy.cpp  ims_callback_proxy.cpp  ims_callback_stub.cpp  ims_death_recipient.cpp  ims_proxy.cpp
ims_interfaces/include/: ims_callback.h  ims_callback_proxy.h  ims_callback_stub.h  ims_client.h  ims_interface.h  ims_proxy.h  ims_types.h
ims_interfaces/src/: cellular_call_callback.cpp  ims_callback_proxy.cpp  ims_callback_stub.cpp  ims_client.cpp
interfaces/: call_status_callback_proxy.h  cellular_call_callback.h  cellular_call_client.h  cellular_call_death_recipient.h  cellular_call_interface.h  cellular_call_proxy.h  cellular_call_types.h  i_call_status_callback.h  ims_callback.h  ims_callback_proxy.h  ims_callback_stub.h  ims_death_recipient.h  ims_interface.h  ims_proxy.h  ims_types.h
interfaces/innerkits/ims/: BUILD.gn  ims_call_callback_interface.h  ims_call_callback_ipc_interface_code.h  ims_call_callback_proxy.h  ims_call_callback_stub.h  ims_call_client.h  ims_call_death_recipient.h  ims_call_interface.h  ims_call_ipc_interface_code.h  ims_call_proxy.h  ims_call_types.h  ims_error.h  ims_feature.h  tel_ims_call_api.versionscript
interfaces/innerkits/satellite/: BUILD.gn  satellite_call_callback_interface.h  satellite_call_callback_ipc_interface_code.h  satellite_call_callback_proxy.h  satellite_call_callback_stub.h  satellite_call_client.h  satellite_call_interface.h  satellite_call_ipc_interface_code.h  satellite_call_proxy.h  satellite_call_types.h  satellite_radio_event.h  tel_satellite_call_api.versionscript
sa_profile/: 4006.json  4006.xml  4006_dynamic.json  BUILD.gn
services/common/include/: base_request.h  cellular_call_data_struct.h  cellular_call_dump_helper.h  cellular_call_hilog.h  cellular_call_hisysevent.h  cellular_call_rdb_helper.h  emergency_utils.h  mmi_code_message.h  mmi_code_utils.h  module_service_utils.h  standardize_utils.h  supplement_request_cs.h  supplement_request_ims.h
services/common/src/: cellular_call_dump_helper.cpp  cellular_call_hisysevent.cpp  cellular_call_rdb_helper.cpp  emergency_utils.cpp  mmi_code_message.cpp  mmi_code_utils.cpp  module_service_utils.cpp  standardize_utils.cpp  supplement_request_cs.cpp  supplement_request_ims.cpp
services/connection/include/: base_connection.h  base_request.h  cellular_call_connection_cs.h  cellular_call_connection_ims.h  cellular_call_connection_satellite.h  config_request.h  supplement_request.h  supplement_request_cs.h  supplement_request_ims.h
services/connection/src/: base_connection.cpp  base_request.cpp  cellular_call_connection_cs.cpp  cellular_call_connection_ims.cpp  cellular_call_connection_satellite.cpp  config_request.cpp  supplement_request.cpp  supplement_request_cs.cpp  supplement_request_ims.cpp
services/control/include/: cellular_call_config.h  cellular_call_stub.h  cellular_call_supplement.h  control_base.h  cs_control.h  ims_control.h  ims_video_call_control.h  mmi_code_message.h  mmi_handler.h  satellite_control.h
services/control/src/: cellular_call_config.cpp  cellular_call_stub.cpp  cs_control.cpp  (+7 more)
test/: BUILD.gn  cellular_call_test.gni  cfi_blocklist.txt
test/fuzztest/: BUILD.gn
test/fuzztest/answerrequest_fuzzer/: BUILD.gn  answerrequest_fuzzer.cpp  answerrequest_fuzzer.h
test/fuzztest/common_fuzzer/: addcellularcalltoken_fuzzer.cpp  addcellularcalltoken_fuzzer.h
test/fuzztest/dialrequest_fuzzer/: BUILD.gn  dialrequest_fuzzer.cpp  dialrequest_fuzzer.h
test/fuzztest/getcallrestriction_fuzzer/: BUILD.gn  getcallrestriction_fuzzer.cpp  getcallrestriction_fuzzer.h
test/fuzztest/getcscalldata_fuzzer/: BUILD.gn  getcscalldata_fuzzer.cpp  getcscalldata_fuzzer.h
test/fuzztest/imscallback_fuzzer/: BUILD.gn  imscallback_fuzzer.cpp  imscallback_fuzzer.h
test/fuzztest/imscallback_fuzzer/corpus/: init
test/fuzztest/imsclient_fuzzer/: BUILD.gn  imsclient_fuzzer.cpp  imsclient_fuzzer.h
test/fuzztest/registercallmanagercallback_fuzzer/: BUILD.gn  registercallmanagercallback_fuzzer.cpp  registercallmanagercallback_fuzzer.h
test/fuzztest/reporthangupinfo_fuzzer/: BUILD.gn  reporthangupinfo_fuzzer.cpp  reporthangupinfo_fuzzer.h
test/fuzztest/reporthungupinfo_fuzzer/: BUILD.gn  reporthungupinfo_fuzzer.cpp  reporthungupinfo_fuzzer.h
test/fuzztest/satellitecallback_fuzzer/: BUILD.gn  satellitecallback_fuzzer.cpp  satellitecallback_fuzzer.h
test/fuzztest/satellitecallrequest_fuzzer/: BUILD.gn  satellitecallrequest_fuzzer.cpp  satellitecallrequest_fuzzer.h
test/fuzztest/satelliteclient_fuzzer/: BUILD.gn  satelliteclient_fuzzer.cpp  satelliteclient_fuzzer.h
test/fuzztest/separateconference_fuzzer/: BUILD.gn  separateconference_fuzzer.cpp  separateconference_fuzzer.h
test/fuzztest/setimsfeaturevalue_fuzzer/: BUILD.gn  setimsfeaturevalue_fuzzer.cpp  setimsfeaturevalue_fuzzer.h
test/fuzztest/setorupdatecallreportinfo_fuzzer/: BUILD.gn  setorupdatecallreportinfo_fuzzer.cpp  setorupdatecallreportinfo_fuzzer.h
test/fuzztest/setpreviewwindow_fuzzer/: BUILD.gn  setpreviewwindow_fuzzer.cpp  setpreviewwindow_fuzzer.h
test/mock/: BUILD.gn  mock_network_search.h  mock_sim_manager.h  mock_tel_ril_manager.h
test/unittest/cstest/: BUILD.gn  cs1_test.cpp  cs2_test.cpp  cs_calloperation_test.cpp  cs_test.cpp  cs_test.h  token.h
test/unittest/imstest/: BUILD.gn  cellular_call_hisysevent_test.cpp  cellular_call_stub_test.cpp  cellular_call_supplement_test.cpp  config_request_test.cpp  emergency_utils_test.cpp  ims1_test.cpp  ims2_test.cpp  ims_call_callback_stub_test.cpp  ims_callback1_test.cpp  ims_callback_proxy_test.cpp  ims_callback_stub_test.cpp  ims_callback_test.cpp  ims_connection_test.cpp  ims_test.cpp  ims_test.h  mmi_code_message_test.cpp  standardize_utils_test.cpp  token.h  zero_branch1_test.cpp  zero_branch2_test.cpp  zero_branch_test.cpp
test/unittest/satellitetest/: BUILD.gn  satellite_callback_test.cpp  satellite_test.cpp  satellite_test.h  token.h  zero_branch_test.cpp
(+35 files in other folders)
