# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/telephony/core_service/telephony.gni")
import("//build/ohos.gni")

SOURCE_DIR = "//base/telephony/cellular_call"

ohos_shared_library("tel_cellular_call") {
  sources = [
    "$SOURCE_DIR/framework/call_status_callback_proxy.cpp",
    "$SOURCE_DIR/framework/cellular_call_callback.cpp",
    "$SOURCE_DIR/framework/cellular_call_proxy.cpp",
    "$SOURCE_DIR/framework/ims_callback_stub.cpp",
    "$SOURCE_DIR/framework/ims_client.cpp",
    "$SOURCE_DIR/framework/ims_death_recipient.cpp",
    "$SOURCE_DIR/framework/ims_proxy.cpp",
    "$SOURCE_DIR/services/common/src/cellular_call_dump_helper.cpp",
    "$SOURCE_DIR/services/common/src/emergency_utils.cpp",
    "$SOURCE_DIR/services/common/src/mmi_code_utils.cpp",
    "$SOURCE_DIR/services/common/src/module_service_utils.cpp",
    "$SOURCE_DIR/services/common/src/standardize_utils.cpp",
    "$SOURCE_DIR/services/connection/src/base_connection.cpp",
    "$SOURCE_DIR/services/connection/src/base_request.cpp",
    "$SOURCE_DIR/services/connection/src/cellular_call_connection_cs.cpp",
    "$SOURCE_DIR/services/connection/src/cellular_call_connection_ims.cpp",
    "$SOURCE_DIR/services/connection/src/config_request.cpp",
    "$SOURCE_DIR/services/connection/src/supplement_request.cpp",
    "$SOURCE_DIR/services/control/src/cellular_call_config.cpp",
    "$SOURCE_DIR/services/control/src/cellular_call_supplement.cpp",
    "$SOURCE_DIR/services/control/src/control_base.cpp",
    "$SOURCE_DIR/services/control/src/cs_control.cpp",
    "$SOURCE_DIR/services/control/src/ims_control.cpp",
    "$SOURCE_DIR/services/manager/src/cellular_call_handler.cpp",
    "$SOURCE_DIR/services/manager/src/cellular_call_register.cpp",
    "$SOURCE_DIR/services/manager/src/cellular_call_service.cpp",
    "$SOURCE_DIR/services/manager/src/cellular_call_stub.cpp",
  ]

  include_dirs = [
    "$SOURCE_DIR/services/common/include",
    "$SOURCE_DIR/services/manager/include",
    "$SOURCE_DIR/services/control/include",
    "$SOURCE_DIR/services/connection/include",
    "$SOURCE_DIR/interfaces",
    "//base/telephony/call_manager/interfaces/innerkits",
    "//third_party/libphonenumber/cpp/src",
    "//third_party/libphonenumber/cpp/src/phonenumbers",
  ]

  defines += [
    "TELEPHONY_LOG_TAG = \"CellularCall\"",
    "LOG_DOMAIN = 0xD002B01",
  ]

  configs = [ "//base/telephony/core_service/utils:telephony_log_config" ]

  deps = [
    "//base/telephony/core_service/interfaces/innerkits:tel_core_service_api",
    "//third_party/libphonenumber/cpp:phonenumber_standard",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "appexecfwk_standard:libeventhandler",
    "ipc:ipc_core",
    "ril_adapter:hril_innerkits",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  part_name = "cellular_call"
  subsystem_name = "telephony"
}
