# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

group("unittest") {
  testonly = true
  deps = []
  deps += [
    "unittest/cstest:tel_cs1_test",
    "unittest/cstest:tel_cs2_test",
    "unittest/cstest:tel_cs_calloperation_test",
    "unittest/imstest:tel_cellular_call_hisysevent_test",
    "unittest/imstest:tel_cellular_call_stub_test",
    "unittest/imstest:tel_config_request_test",
    "unittest/imstest:tel_emergency_utils_test",
    "unittest/imstest:tel_ims1_test",
    "unittest/imstest:tel_ims2_test",
    "unittest/imstest:tel_ims_call_callback_stub_test",
    "unittest/imstest:tel_ims_callback1_test",
    "unittest/imstest:tel_ims_callback2_test",
    "unittest/imstest:tel_ims_connection_test",
    "unittest/imstest:tel_mmi_code_message_test",
    "unittest/imstest:tel_zero_branch1_test",
    "unittest/imstest:tel_zero_branch2_test",
    "unittest/satellitetest:tel_satellite_callback_test",
    "unittest/satellitetest:tel_satellite_test",
    "unittest/satellitetest:tel_satellite_zero_branch_test",
  ]
}
