# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("cellular_call_test.gni")

config("cellular_call_test_config") {
  include_dirs = cellular_call_incluedirs
}

ohos_static_library("cellular_call_test_base") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  use_exceptions = true
  sources = cellular_call_base_src
  branch_protector_ret = "pac_ret"
  public_configs = [ ":cellular_call_test_config" ]
  external_deps = cellular_call_external_deps
  external_deps +=[ "core_service:ffrt_mocked" ]
  defines = cellular_call_defines
  part_name = "cellular_call"
  subsystem_name = "telephony"
}


group("unittest") {
  testonly = true
  deps = []
  deps += [
    "unittest/cstest:cellular_call_cs1_test",
    "unittest/cstest:cellular_call_cs2_test",
    "unittest/cstest:cellular_call_cs_calloperation_test",
    "unittest/imstest:cellular_call_ims1_test",
    "unittest/imstest:cellular_call_ims2_test",
    "unittest/imstest:cellular_call_ims_call_callback_stub_test",
    "unittest/imstest:cellular_call_ims_callback_proxy_test",
    "unittest/imstest:cellular_call_ims_callback_stub_test",
    "unittest/imstest:cellular_call_ims_cellular_call_stub_test",
    "unittest/imstest:cellular_call_ims_cellular_call_supplement_test",
    "unittest/imstest:cellular_call_ims_config_request_test",
    "unittest/imstest:cellular_call_ims_connection_test",
    "unittest/imstest:cellular_call_ims_emergency_utils_test",
    "unittest/imstest:cellular_call_ims_hisysevent_test",
    "unittest/imstest:cellular_call_ims_mmi_code_message_test",
    "unittest/imstest:cellular_call_ims_standardize_utils_test",
    "unittest/imstest:cellular_call_ims_zero_branch1_test",
    "unittest/imstest:cellular_call_ims_zero_branch_test",
    "unittest/satellitetest:cellular_call_satellite_callback_test",
    "unittest/satellitetest:cellular_call_satellite_test",
    "unittest/satellitetest:cellular_call_satellite_zero_branch_test",
  ]
}

group("test") {
  testonly = true
  deps = [
    ":unittest",
    "fuzztest:fuzztest"
  ]
}
