# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")

group("fuzztest") {
  testonly = true
  deps = []

  deps += [ "getcallrestriction_fuzzer:fuzztest" ]
  deps += [ "setimsfeaturevalue_fuzzer:fuzztest" ]
  deps += [ "setpreviewwindow_fuzzer:fuzztest" ]
  deps += [ "answerrequest_fuzzer:fuzztest" ]
  deps += [ "dialrequest_fuzzer:fuzztest" ]
  deps += [ "getcscalldata_fuzzer:fuzztest" ]
  deps += [ "registercallmanagercallback_fuzzer:fuzztest" ]
  deps += [ "imsclient_fuzzer:fuzztest" ]
  deps += [ "reporthungupinfo_fuzzer:fuzztest" ]
  deps += [ "separateconference_fuzzer:fuzztest" ]
  deps += [ "setorupdatecallreportinfo_fuzzer:fuzztest" ]
}
