# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/telephony/core_service/telephony.gni")
import("//build/ohos.gni")

CELLULAR_CALL_SOURCE_DIR = "//base/telephony/cellular_call"
CELLULAR_CALL_INTERFACES_INNERKITS =
    "$CELLULAR_CALL_SOURCE_DIR/interfaces/innerkits"

config("public_config_ims_call_api") {
  # header file path
  include_dirs = [
    "$CELLULAR_CALL_INTERFACES_INNERKITS/ims",
    "$CELLULAR_CALL_SOURCE_DIR/services/common/include",
  ]
}

ohos_shared_library("tel_ims_call_api") {
  sources = [ "$CELLULAR_CALL_SOURCE_DIR/services/ims_service_interaction/src/ims_call_callback_proxy.cpp" ]

  public_configs = [ ":public_config_ims_call_api" ]

  external_deps = [
    "c_utils:utils",
    "call_manager:tel_call_manager_api",
    "core_service:tel_core_service_api",
    "drivers_interface_ril:hril_innerkits",
    "ipc:ipc_core",
  ]

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  defines += [
    "TELEPHONY_LOG_TAG = \"ImsCallApi\"",
    "LOG_DOMAIN = 0xD001F09",
  ]

  part_name = "cellular_call"
  subsystem_name = "telephony"
}
