# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")

SUBSYSTEM_DIR = "../../.."

config("public_config_ims_call_api") {
  # header file path
  include_dirs = [
    "${SUBSYSTEM_DIR}/interfaces/innerkits/ims",
    "${SUBSYSTEM_DIR}/services/common/include",
  ]
}

ohos_shared_library("tel_ims_call_api") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"
  version_script = "tel_ims_call_api.versionscript"
  sources = [ "${SUBSYSTEM_DIR}/services/ims_service_interaction/src/ims_call_callback_proxy.cpp" ]

  public_configs = [ ":public_config_ims_call_api" ]

  external_deps = [
    "c_utils:utils",
    "call_manager:tel_call_manager_api",
    "core_service:libtel_common",
    "core_service:tel_core_service_api",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_single",
  ]

  defines = [
    "TELEPHONY_LOG_TAG = \"ImsCallApi\"",
    "LOG_DOMAIN = 0xD001F09",
  ]

  innerapi_tags = [ "platformsdk" ]

  part_name = "cellular_call"
  subsystem_name = "telephony"
}
