# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//base/telephony/core_service/telephony.gni")
import("//build/config/features.gni")
import("//build/ohos.gni")
SOURCE_DIR = "//base/telephony/cellular_call"

import("//build/test.gni")

##############################fuzztest##########################################
ohos_fuzztest("SetOrUpdateCallReportInfoFuzzTest") {
  module_output_path = "cellular_call/SetOrUpdateCallReportInfoFuzzTest"
  module_out_path = module_output_path
  fuzz_config_file = "//base/telephony/cellular_call/test/fuzztest/setorupdatecallreportinfo_fuzzer"

  include_dirs = [
    "//base/telephony/cellular_call/services/common/include",
    "//base/telephony/cellular_call/services/manager/include",
    "//base/telephony/cellular_call/test/fuzztest/common_fuzzer",
    "//base/telephony/call_manager/interfaces/innerkits",
    "//base/telephony/call_manager/services/telephony_interaction/include",
    "//base/telephony/cellular_call/test/fuzztest/common_fuzzer",
    "$SOURCE_DIR/interfaces/innerkits/ims",
    "$SOURCE_DIR/services/common/include",
    "$SOURCE_DIR/services/manager/include",
    "$SOURCE_DIR/services/control/include",
    "$SOURCE_DIR/services/connection/include",
    "//third_party/libphonenumber/cpp/src",
    "//third_party/libphonenumber/cpp/src/phonenumbers",
  ]

  configs = [ "//base/telephony/core_service/utils:telephony_log_config" ]

  deps = [ "//base/telephony/cellular_call:tel_cellular_call" ]

  external_deps = [
    "ability_base:want",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "call_manager:tel_call_manager_api",
    "common_event_service:cesfwk_innerkits",
    "core_service:libtel_common",
    "core_service:tel_core_service_api",
    "drivers_interface_ril:hril_innerkits",
    "eventhandler:libeventhandler",
    "hisysevent_native:libhisysevent",
    "hitrace_native:hitrace_meter",
    "init:libbegetutil",
    "ipc:ipc_core",
    "resource_management:global_resmgr",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
  defines += [
    "TELEPHONY_LOG_TAG = \"CellularCallFuzzTest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]
  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [
    "//base/telephony/cellular_call/test/fuzztest/common_fuzzer/addcellularcalltoken_fuzzer.cpp",
    "setorupdatecallreportinfo_fuzzer.cpp",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":SetOrUpdateCallReportInfoFuzzTest",
  ]
}
###############################################################################
