# Copyright (C) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/telephony/core_service/telephony.gni")
import("//build/ohos.gni")
SOURCE_DIR = "//base/telephony/cellular_call"
import("//build/test.gni")

ohos_unittest("tel_cellular_call_cs_test") {
  subsystem_name = "telephony"
  part_name = "cellular_call"
  test_module = "tel_cellular_call_cs_test"
  module_out_path = part_name + "/" + test_module
  sources = [
    "//base/telephony/call_manager/services/telephony_interaction/src/cellular_call_proxy.cpp",
    "cs_test.cpp",
  ]

  include_dirs = [
    "$SOURCE_DIR/interfaces/innerkits/ims",
    "$SOURCE_DIR/services/common/include",
    "$SOURCE_DIR/services/connection/include",
    "$SOURCE_DIR/services/control/include",
    "$SOURCE_DIR/services/manager/include",
    "//base/telephony/call_manager/interfaces/innerkits",
    "//base/telephony/call_manager/services/telephony_interaction/include",
    "//third_party/libphonenumber/cpp/src",
    "//third_party/libphonenumber/cpp/src/phonenumbers",
  ]

  configs = [ "//base/telephony/core_service/utils:telephony_log_config" ]

  deps = [
    "//base/telephony/cellular_call:tel_cellular_call",
    "//base/telephony/core_service/interfaces/innerkits:tel_core_service_api",
    "//base/telephony/core_service/utils:libtel_common",
    "//third_party/googletest:gtest_main",
    "//third_party/libphonenumber/cpp:phonenumber_standard",
  ]

  external_deps = [
    "ability_base:want",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "core_service:tel_core_service_api",
    "drivers_interface_ril:hril_innerkits",
    "eventhandler:libeventhandler",
    "init:libbegetutil",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
  defines += [
    "TELEPHONY_LOG_TAG = \"CellularCallCsTest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]
  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }
}

group("unittest") {
  testonly = true
  deps = [ ":tel_cellular_call_cs_test" ]
}
